# prank-service-fastapi-vue

./: .gitignore  Dockerfile  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
backend/: config.py  main.py  schemas.py  services.py  utils.py  worker.py
frontend/: main.py  package-lock.json  package.json
frontend/src/: App.vue  router.js
frontend/src/components/: CameraObj.vue  cInformationAbout.vue  cLoader.vue
frontend/src/pages/: MainPage.vue  ReplaceTG.vue  SuccessPage.vue
nginx/: moan.conf  moan_prod.conf  nginx.conf  nginx.local.conf  tiktok.conf  tiktok_prod.conf
nginx/local_ssl/: tiktok.localhost.cert  tiktok.localhost.key
ston_frontend/: package-lock.json
ston_frontend/public/: index.html
ston_frontend/src/: App.vue  MainPage.vue  main.js  router.js
ston_frontend/src/components/: ReplaceTG.vue  cInformationAbout.vue
tests/: conftest.py
tests/integrations/: test_send_media_task.py
video_processor/: go.mod  go.sum  main.go
